# deepfold-linear

./: .env.example  .gitignore  CLAUDE.md  SPEC.md  notes.txt  pyproject.toml
configs/: model.yaml
scripts/: _plot_utils.py  bench_coevol.py  bench_distogram.py  bench_kernels.py  benchmark_correctness.py  benchmark_flash_bwd.py  benchmark_kernels.py  plot_alpha_h.py  plot_gamma.py  plot_lambda_h.py  plot_pos_weight.py  plot_r_h.py  plot_w_dist.py  train.py
src/deepfold/: __init__.py
src/deepfold/data/: augment.py  const.py  crop.py  dataset.py  featurize.py  msa.py  pad.py  parse.py  sampler.py  symmetry.py  tokenize.py  types.py
src/deepfold/model/: atom_encoder.py  deepfold.py  diffusion.py  diffusion_v2.py  init.py  input_embedding.py  losses.py  msa.py  position_encoding.py  primitives.py  sinkhorn.py  trunk.py  trunk_block.py
src/deepfold/model/kernels/: balanced_sinkhorn_bwd.py  coevol_kernel.py  (+9 more)
src/deepfold/train/: config.py  scheduler.py  trainer.py
src/deepfold/utils/: cg.py  scatter.py
tests/: bench_cg_sinkhorn.py  bench_flash_diffusion_attn.py  bench_kernels.py  smoke_train.py  test_augment.py  test_batch_embeddings.py  test_batch_losses.py  test_batch_trunk.py  test_batch_utils.py  test_cg.py  test_checkpoint.py  test_coevol_kernel.py  test_cross_attn_kernel.py  test_dataset_batch.py  test_diffusion_v2.py  test_dual_transport.py  test_e2e_backprop.py  test_flash_atom_attn.py  test_flash_diffusion_attn.py  test_flash_sinkhorn_batch.py  test_init.py  test_modules.py  test_primitives.py  test_sinkhorn_batch.py  test_triton_fallback_consistency.py
