[project]
name = "deepfold-linear"
version = "0.1.0"
description = "Protein complex structure prediction with UOT-Sinkhorn attention + EGNN"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "einops>=0.7.0",
    "scipy>=1.11.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-xdist>=3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deepfold"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
